// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WML normalize should accumulate multiple appearances of the same key 1`] = `
Object {
  "Test": Object {
    "Story": false,
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "a123",
              "tag": "Room",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 1,
              "key": "a123",
              "tag": "Room",
            },
          },
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "children": Array [],
                    "data": Object {
                      "index": 2,
                      "key": "a123",
                      "tag": "Room",
                    },
                  },
                ],
                "data": Object {
                  "if": "true",
                  "tag": "Statement",
                },
              },
            ],
            "data": Object {
              "tag": "If",
            },
          },
        ],
        "contextStack": Array [],
        "data": Object {
          "Story": undefined,
          "key": "Test",
          "tag": "Asset",
        },
      },
    ],
    "fileName": undefined,
    "instance": false,
    "key": "Test",
    "tag": "Asset",
    "zone": undefined,
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": "Vortex",
                },
              },
            ],
            "data": Object {
              "tag": "Name",
            },
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "key": "a123",
          "tag": "Room",
          "x": undefined,
          "y": undefined,
        },
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": "Hello, world!",
                },
              },
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "Space",
                },
              },
            ],
            "data": Object {
              "tag": "Description",
            },
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "key": "a123",
          "tag": "Room",
          "x": undefined,
          "y": undefined,
        },
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": "Vortex!",
                },
              },
            ],
            "data": Object {
              "tag": "Description",
            },
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "tag": "If",
          },
          Object {
            "if": "true",
            "tag": "Statement",
          },
        ],
        "data": Object {
          "key": "a123",
          "tag": "Room",
          "x": undefined,
          "y": undefined,
        },
      },
    ],
    "key": "a123",
    "tag": "Room",
  },
}
`;

exports[`WML normalize should correctly handle conditionals in message text 1`] = `
Object {
  "Test": Object {
    "Story": false,
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "a123",
              "tag": "Room",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "strong",
              "tag": "Variable",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "trendy",
              "tag": "Variable",
            },
          },
        ],
        "contextStack": Array [],
        "data": Object {
          "Story": undefined,
          "key": "Test",
          "tag": "Asset",
        },
      },
    ],
    "fileName": undefined,
    "instance": false,
    "key": "Test",
    "tag": "Asset",
    "zone": undefined,
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": "Vortex",
                },
              },
            ],
            "data": Object {
              "tag": "Name",
            },
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": "Hello, world!",
                },
              },
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "children": Array [],
                        "data": Object {
                          "tag": "String",
                          "value": "Vortex!",
                        },
                      },
                    ],
                    "data": Object {
                      "if": "strong",
                      "tag": "Statement",
                    },
                  },
                ],
                "data": Object {
                  "tag": "If",
                },
              },
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": " ",
                },
              },
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "children": Array [
                          Object {
                            "children": Array [
                              Object {
                                "children": Array [],
                                "data": Object {
                                  "tag": "String",
                                  "value": "V.O.R.T.E.X.",
                                },
                              },
                            ],
                            "data": Object {
                              "if": "trendy",
                              "tag": "Statement",
                            },
                          },
                        ],
                        "data": Object {
                          "tag": "If",
                        },
                      },
                    ],
                    "data": Object {
                      "if": "!strong",
                      "tag": "Statement",
                    },
                  },
                ],
                "data": Object {
                  "tag": "If",
                },
              },
            ],
            "data": Object {
              "tag": "Description",
            },
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "key": "a123",
          "tag": "Room",
          "x": undefined,
          "y": undefined,
        },
      },
    ],
    "key": "a123",
    "tag": "Room",
  },
  "strong": Object {
    "appearances": Array [
      Object {
        "children": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "default": "false",
          "key": "strong",
          "tag": "Variable",
        },
      },
    ],
    "default": "false",
    "key": "strong",
    "tag": "Variable",
  },
  "trendy": Object {
    "appearances": Array [
      Object {
        "children": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "default": "false",
          "key": "trendy",
          "tag": "Variable",
        },
      },
    ],
    "default": "false",
    "key": "trendy",
    "tag": "Variable",
  },
}
`;

exports[`WML normalize should correctly handle multiple and nested conditionals 1`] = `
Object {
  "Test": Object {
    "Story": false,
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "a123",
              "tag": "Room",
            },
          },
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "children": Array [],
                    "data": Object {
                      "index": 1,
                      "key": "a123",
                      "tag": "Room",
                    },
                  },
                ],
                "data": Object {
                  "if": "strong",
                  "tag": "Statement",
                },
              },
            ],
            "data": Object {
              "tag": "If",
            },
          },
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "children": Array [
                          Object {
                            "children": Array [],
                            "data": Object {
                              "index": 2,
                              "key": "a123",
                              "tag": "Room",
                            },
                          },
                        ],
                        "data": Object {
                          "if": "trendy",
                          "tag": "Statement",
                        },
                      },
                    ],
                    "data": Object {
                      "tag": "If",
                    },
                  },
                ],
                "data": Object {
                  "if": "!strong",
                  "tag": "Statement",
                },
              },
            ],
            "data": Object {
              "tag": "If",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "strong",
              "tag": "Variable",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "trendy",
              "tag": "Variable",
            },
          },
        ],
        "contextStack": Array [],
        "data": Object {
          "Story": undefined,
          "key": "Test",
          "tag": "Asset",
        },
      },
    ],
    "fileName": undefined,
    "instance": false,
    "key": "Test",
    "tag": "Asset",
    "zone": undefined,
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": "Vortex",
                },
              },
            ],
            "data": Object {
              "tag": "Name",
            },
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": "Hello, world!",
                },
              },
            ],
            "data": Object {
              "tag": "Description",
            },
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "key": "a123",
          "tag": "Room",
          "x": undefined,
          "y": undefined,
        },
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": "Vortex!",
                },
              },
            ],
            "data": Object {
              "tag": "Description",
            },
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "tag": "If",
          },
          Object {
            "if": "strong",
            "tag": "Statement",
          },
        ],
        "data": Object {
          "key": "a123",
          "tag": "Room",
          "x": undefined,
          "y": undefined,
        },
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": "V.O.R.T.E.X.",
                },
              },
            ],
            "data": Object {
              "tag": "Description",
            },
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "tag": "If",
          },
          Object {
            "if": "!strong",
            "tag": "Statement",
          },
          Object {
            "tag": "If",
          },
          Object {
            "if": "trendy",
            "tag": "Statement",
          },
        ],
        "data": Object {
          "key": "a123",
          "tag": "Room",
          "x": undefined,
          "y": undefined,
        },
      },
    ],
    "key": "a123",
    "tag": "Room",
  },
  "strong": Object {
    "appearances": Array [
      Object {
        "children": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "default": "false",
          "key": "strong",
          "tag": "Variable",
        },
      },
    ],
    "default": "false",
    "key": "strong",
    "tag": "Variable",
  },
  "trendy": Object {
    "appearances": Array [
      Object {
        "children": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "default": "false",
          "key": "trendy",
          "tag": "Variable",
        },
      },
    ],
    "default": "false",
    "key": "trendy",
    "tag": "Variable",
  },
}
`;

exports[`WML normalize should correctly serialize multiple unconditioned descriptions 1`] = `
Object {
  "Test": Object {
    "Story": false,
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "test",
              "tag": "Room",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 1,
              "key": "test",
              "tag": "Room",
            },
          },
        ],
        "contextStack": Array [],
        "data": Object {
          "Story": undefined,
          "key": "Test",
          "tag": "Asset",
        },
      },
    ],
    "fileName": undefined,
    "instance": false,
    "key": "Test",
    "tag": "Asset",
    "zone": undefined,
  },
  "test": Object {
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": "One",
                },
              },
            ],
            "data": Object {
              "tag": "Description",
            },
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "key": "test",
          "tag": "Room",
          "x": undefined,
          "y": undefined,
        },
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": "Two",
                },
              },
            ],
            "data": Object {
              "tag": "Description",
            },
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "key": "test",
          "tag": "Room",
          "x": undefined,
          "y": undefined,
        },
      },
    ],
    "key": "test",
    "tag": "Room",
  },
}
`;

exports[`WML normalize should denormalize condition dependencies into contextStack 1`] = `
Object {
  "Test": Object {
    "Story": false,
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "a123",
              "tag": "Room",
            },
          },
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "children": Array [],
                    "data": Object {
                      "index": 1,
                      "key": "a123",
                      "tag": "Room",
                    },
                  },
                ],
                "data": Object {
                  "if": "strong",
                  "tag": "Statement",
                },
              },
            ],
            "data": Object {
              "tag": "If",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "strong",
              "tag": "Variable",
            },
          },
        ],
        "contextStack": Array [],
        "data": Object {
          "Story": undefined,
          "key": "Test",
          "tag": "Asset",
        },
      },
    ],
    "fileName": undefined,
    "instance": false,
    "key": "Test",
    "tag": "Asset",
    "zone": undefined,
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": "Vortex",
                },
              },
            ],
            "data": Object {
              "tag": "Name",
            },
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": "Hello, world!",
                },
              },
            ],
            "data": Object {
              "tag": "Description",
            },
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "key": "a123",
          "tag": "Room",
          "x": undefined,
          "y": undefined,
        },
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": "Vortex!",
                },
              },
            ],
            "data": Object {
              "tag": "Description",
            },
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "tag": "If",
          },
          Object {
            "if": "strong",
            "tag": "Statement",
          },
        ],
        "data": Object {
          "key": "a123",
          "tag": "Room",
          "x": undefined,
          "y": undefined,
        },
      },
    ],
    "key": "a123",
    "tag": "Room",
  },
  "strong": Object {
    "appearances": Array [
      Object {
        "children": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "default": "false",
          "key": "strong",
          "tag": "Variable",
        },
      },
    ],
    "default": "false",
    "key": "strong",
    "tag": "Variable",
  },
}
`;

exports[`WML normalize should normalize a character 1`] = `
Object {
  "Import-0": Object {
    "appearances": Array [
      Object {
        "children": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Tess",
            "tag": "Character",
          },
        ],
        "data": Object {
          "from": "base",
          "mapping": Object {},
          "tag": "Import",
        },
      },
    ],
    "from": "base",
    "key": "Import-0",
    "mapping": Object {},
    "tag": "Import",
  },
  "Tess": Object {
    "Pronouns": Object {
      "adjective": "hers",
      "object": "her",
      "possessive": "her",
      "reflexive": "herself",
      "subject": "she",
    },
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": "Tess",
                },
              },
            ],
            "data": Object {
              "tag": "Name",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "tag": "FirstImpression",
              "value": "Frumpy goth",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "adjective": "hers",
              "object": "her",
              "possessive": "her",
              "reflexive": "herself",
              "subject": "she",
              "tag": "Pronouns",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "tag": "OneCoolThing",
              "value": "Fuchsia eyes",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "tag": "Outfit",
              "value": "A battered frock-coat",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "Import-0",
              "tag": "Import",
            },
          },
        ],
        "contextStack": Array [],
        "data": Object {
          "Pronouns": Object {
            "adjective": "hers",
            "object": "her",
            "possessive": "her",
            "reflexive": "herself",
            "subject": "she",
          },
          "key": "Tess",
          "tag": "Character",
        },
      },
    ],
    "assets": Array [],
    "images": Array [],
    "key": "Tess",
    "tag": "Character",
  },
}
`;

exports[`WML normalize should normalize all types of links 1`] = `
Object {
  "Test": Object {
    "Story": false,
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "clockTower",
              "tag": "Feature",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "town",
              "tag": "Knowledge",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "active",
              "tag": "Variable",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "toggleActive",
              "tag": "Action",
            },
          },
        ],
        "contextStack": Array [],
        "data": Object {
          "Story": undefined,
          "key": "Test",
          "tag": "Asset",
        },
      },
    ],
    "fileName": undefined,
    "instance": false,
    "key": "Test",
    "tag": "Asset",
    "zone": undefined,
  },
  "active": Object {
    "appearances": Array [
      Object {
        "children": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "default": "true",
          "key": "active",
          "tag": "Variable",
        },
      },
    ],
    "default": "true",
    "key": "active",
    "tag": "Variable",
  },
  "clockTower": Object {
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": "Clock Tower",
                },
              },
            ],
            "data": Object {
              "tag": "Name",
            },
          },
          Object {
            "children": Array [
              Object {
                "children": Array [
                  Object {
                    "children": Array [],
                    "data": Object {
                      "tag": "String",
                      "value": "Waverly",
                    },
                  },
                ],
                "data": Object {
                  "tag": "Link",
                  "text": "Waverly",
                  "to": "town",
                },
              },
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": " ",
                },
              },
              Object {
                "children": Array [
                  Object {
                    "children": Array [],
                    "data": Object {
                      "tag": "String",
                      "value": "Clock",
                    },
                  },
                ],
                "data": Object {
                  "tag": "Link",
                  "text": "Clock",
                  "to": "clockTower",
                },
              },
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": " ",
                },
              },
              Object {
                "children": Array [
                  Object {
                    "children": Array [],
                    "data": Object {
                      "tag": "String",
                      "value": "Toggle",
                    },
                  },
                ],
                "data": Object {
                  "tag": "Link",
                  "text": "Toggle",
                  "to": "toggleActive",
                },
              },
            ],
            "data": Object {
              "tag": "Description",
            },
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "key": "clockTower",
          "tag": "Feature",
        },
      },
    ],
    "key": "clockTower",
    "tag": "Feature",
  },
  "toggleActive": Object {
    "appearances": Array [
      Object {
        "children": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "key": "toggleActive",
          "src": "active = !active",
          "tag": "Action",
        },
      },
    ],
    "key": "toggleActive",
    "src": "active = !active",
    "tag": "Action",
  },
  "town": Object {
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": "Waverly",
                },
              },
            ],
            "data": Object {
              "tag": "Name",
            },
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": "The town of Waverly is a pleasant place to live.",
                },
              },
            ],
            "data": Object {
              "tag": "Description",
            },
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "key": "town",
          "tag": "Knowledge",
        },
      },
    ],
    "key": "town",
    "tag": "Knowledge",
  },
}
`;

exports[`WML normalize should normalize every needed tag 1`] = `
Object {
  "ImageTest": Object {
    "appearances": Array [
      Object {
        "children": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "TestMap",
            "tag": "Map",
          },
        ],
        "data": Object {
          "key": "ImageTest",
          "tag": "Image",
        },
      },
    ],
    "key": "ImageTest",
    "tag": "Image",
  },
  "Import-0": Object {
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "power",
              "tag": "Variable",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "overview",
              "tag": "Room",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "baseInfo",
              "tag": "Knowledge",
            },
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "from": "BASE",
          "mapping": Object {
            "baseInfo": Object {
              "key": "baseInfo",
              "type": "Knowledge",
            },
            "overview": Object {
              "key": "overview",
              "type": "Room",
            },
            "power": Object {
              "key": "basePower",
              "type": "Variable",
            },
          },
          "tag": "Import",
        },
      },
    ],
    "from": "BASE",
    "key": "Import-0",
    "mapping": Object {
      "baseInfo": Object {
        "key": "baseInfo",
        "type": "Knowledge",
      },
      "overview": Object {
        "key": "overview",
        "type": "Room",
      },
      "power": Object {
        "key": "basePower",
        "type": "Variable",
      },
    },
    "tag": "Import",
  },
  "Test": Object {
    "Story": false,
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "Import-0",
              "tag": "Import",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "a123",
              "tag": "Room",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "b456",
              "tag": "Room",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "TestMap",
              "tag": "Map",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 1,
              "key": "clockTower",
              "tag": "Feature",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "town",
              "tag": "Knowledge",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "active",
              "tag": "Variable",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "inactive",
              "tag": "Computed",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "toggleActive",
              "tag": "Action",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "postFix",
              "tag": "Bookmark",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "activateMoment",
              "tag": "Moment",
            },
          },
        ],
        "contextStack": Array [],
        "data": Object {
          "Story": undefined,
          "key": "Test",
          "tag": "Asset",
        },
      },
    ],
    "fileName": undefined,
    "instance": false,
    "key": "Test",
    "tag": "Asset",
    "zone": undefined,
  },
  "TestMap": Object {
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": "Test Map",
                },
              },
            ],
            "data": Object {
              "tag": "Name",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "ImageTest",
              "tag": "Image",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 1,
              "key": "a123",
              "tag": "Room",
            },
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "key": "TestMap",
          "tag": "Map",
        },
      },
    ],
    "key": "TestMap",
    "tag": "Map",
  },
  "a123": Object {
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "a123#b456",
              "tag": "Exit",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "clockTower",
              "tag": "Feature",
            },
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "key": "a123",
          "tag": "Room",
          "x": undefined,
          "y": undefined,
        },
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": Object {
              "tag": "Position",
              "x": 200,
              "y": 150,
            },
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "TestMap",
            "tag": "Map",
          },
        ],
        "data": Object {
          "key": "a123",
          "tag": "Room",
          "x": undefined,
          "y": undefined,
        },
      },
      Object {
        "children": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "activateMoment",
            "tag": "Moment",
          },
          Object {
            "index": 0,
            "key": "activate",
            "tag": "Message",
          },
        ],
        "data": Object {
          "key": "a123",
          "tag": "Room",
          "x": undefined,
          "y": undefined,
        },
      },
    ],
    "key": "a123",
    "tag": "Room",
  },
  "a123#b456": Object {
    "appearances": Array [
      Object {
        "children": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
        ],
        "data": Object {
          "from": "a123",
          "key": "a123#b456",
          "tag": "Exit",
          "to": "b456",
        },
      },
    ],
    "from": "a123",
    "key": "a123#b456",
    "tag": "Exit",
    "to": "b456",
  },
  "activate": Object {
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": Object {
              "index": 2,
              "key": "a123",
              "tag": "Room",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "tag": "String",
              "value": "It activates!",
            },
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "activateMoment",
            "tag": "Moment",
          },
        ],
        "data": Object {
          "key": "activate",
          "tag": "Message",
        },
      },
    ],
    "key": "activate",
    "tag": "Message",
  },
  "activateMoment": Object {
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": Object {
              "index": 0,
              "key": "activate",
              "tag": "Message",
            },
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "key": "activateMoment",
          "tag": "Moment",
        },
      },
    ],
    "key": "activateMoment",
    "tag": "Moment",
  },
  "active": Object {
    "appearances": Array [
      Object {
        "children": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "default": "true",
          "key": "active",
          "tag": "Variable",
        },
      },
    ],
    "default": "true",
    "key": "active",
    "tag": "Variable",
  },
  "b456": Object {
    "appearances": Array [
      Object {
        "children": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "key": "b456",
          "tag": "Room",
          "x": undefined,
          "y": undefined,
        },
      },
    ],
    "key": "b456",
    "tag": "Room",
  },
  "baseInfo": Object {
    "appearances": Array [
      Object {
        "children": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Import-0",
            "tag": "Import",
          },
        ],
        "data": Object {
          "key": "baseInfo",
          "tag": "Knowledge",
        },
      },
    ],
    "key": "baseInfo",
    "tag": "Knowledge",
  },
  "clockTower": Object {
    "appearances": Array [
      Object {
        "children": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "a123",
            "tag": "Room",
          },
        ],
        "data": Object {
          "key": "clockTower",
          "tag": "Feature",
        },
      },
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": "Clock Tower",
                },
              },
            ],
            "data": Object {
              "tag": "Name",
            },
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "key": "clockTower",
          "tag": "Feature",
        },
      },
    ],
    "key": "clockTower",
    "tag": "Feature",
  },
  "inactive": Object {
    "appearances": Array [
      Object {
        "children": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "key": "inactive",
          "src": "!active",
          "tag": "Computed",
        },
      },
    ],
    "dependencies": undefined,
    "key": "inactive",
    "src": "!active",
    "tag": "Computed",
  },
  "overview": Object {
    "appearances": Array [
      Object {
        "children": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Import-0",
            "tag": "Import",
          },
        ],
        "data": Object {
          "key": "overview",
          "tag": "Room",
          "x": undefined,
          "y": undefined,
        },
      },
    ],
    "key": "overview",
    "tag": "Room",
  },
  "postFix": Object {
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "data": Object {
              "tag": "Space",
            },
          },
          Object {
            "children": Array [],
            "data": Object {
              "tag": "String",
              "value": "Inactive",
            },
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "display": undefined,
          "key": "postFix",
          "tag": "Bookmark",
        },
      },
    ],
    "key": "postFix",
    "tag": "Bookmark",
  },
  "power": Object {
    "appearances": Array [
      Object {
        "children": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
          Object {
            "index": 0,
            "key": "Import-0",
            "tag": "Import",
          },
        ],
        "data": Object {
          "from": "basePower",
          "key": "power",
          "tag": "Variable",
        },
      },
    ],
    "default": "",
    "key": "power",
    "tag": "Variable",
  },
  "toggleActive": Object {
    "appearances": Array [
      Object {
        "children": Array [],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "key": "toggleActive",
          "src": "active = !active",
          "tag": "Action",
        },
      },
    ],
    "key": "toggleActive",
    "src": "active = !active",
    "tag": "Action",
  },
  "town": Object {
    "appearances": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": "Waverly",
                },
              },
            ],
            "data": Object {
              "tag": "Name",
            },
          },
          Object {
            "children": Array [
              Object {
                "children": Array [],
                "data": Object {
                  "tag": "String",
                  "value": "The town of Waverly is a pleasant place to live.",
                },
              },
            ],
            "data": Object {
              "tag": "Description",
            },
          },
        ],
        "contextStack": Array [
          Object {
            "index": 0,
            "key": "Test",
            "tag": "Asset",
          },
        ],
        "data": Object {
          "key": "town",
          "tag": "Knowledge",
        },
      },
    ],
    "key": "town",
    "tag": "Knowledge",
  },
}
`;
